# freesurfer

./: .cirrus.yml  .clang-format  .clang-tidy  .gitignore  .gitmessage  .gitmodules  .travis.yml  CMakeLists.txt  CTestConfig.cmake  README.md  TODO.md  azure-pipelines.yml  goback.sh  repo.dockerfile  test.sh  test_Debug.sh  test_MinSizeRel.sh  test_RelWithDebInfo.sh  test_Release.sh  test_asan.sh  test_cfisan.sh  test_coverage.sh  test_fulllto.sh  test_lsan.sh  test_msan.sh  test_profile.sh  test_proxy.sh  test_thinlto.sh  test_tsan.sh  test_ubsan.sh
.git-keywords/: kwclean.py  kwset.py  update-all-keywords.py  update-modified-keywords.py
.git-rcs-keywords/: hello.c
AntsDenoiseImageFs/: AntsDenoiseImageFs.cpp  AntsDenoiseImageFs.help.xml  CMakeLists.txt  itkAdaptiveNonLocalMeansDenoisingImageFilter.h  itkAdaptiveNonLocalMeansDenoisingImageFilter.hxx  itkNonLocalPatchBasedImageFilter.h  itkNonLocalPatchBasedImageFilter.hxx  itkVarianceImageFilter.h  itkVarianceImageFilter.hxx  test.sh
AntsN4BiasFieldCorrectionFs/: AntsN4BiasFieldCorrectionFs.cpp  AntsN4BiasFieldCorrectionFs.help.xml  CMakeLists.txt
BrainstemSS/: CMakeLists.txt  quantifyBrainstemStructures.sh  segmentBS.tcsh
ContinuousIntegration/: .cirrus.yml  .dockerignore  .travis.yml  azure-annex-pipeline.yml  azure-linux-pipeline.yml  azure-macos-pipeline.yml  repo.dockerfile
GEMS2/: CMakeLists.txt  gzstream.C  (+43 more)
dngtester/: CMakeLists.txt  cpptester.cpp  dngtester.cpp
gems/GUI/: CMakeLists.txt  kvlAtlasMeshViewingConsole.cxx  kvlAtlasMeshViewingConsole.h  kvlAtlasMeshViewingConsoleGUI.cxx  kvlAtlasMeshViewingConsoleGUI.h  kvlAtlasParameterEstimationConsole.cxx  kvlAtlasParameterEstimationConsole.h  kvlAtlasParameterEstimationConsoleGUI.cxx  kvlAtlasParameterEstimationConsoleGUI.h  kvlEstimateAtlasParameters.cxx  kvlImageViewer.cxx  kvlImageViewer.h  kvlViewMeshCollectionWithGUI.cxx  vtkFlRenderWindowInteractor.cxx  vtkFlRenderWindowInteractor.h
lineprof/: CMakeLists.txt  LineProf.cpp  LineProf.h  LineProfTest.cpp  PetscSolver.cpp  PetscSolver.h  Preprocessor.cpp  Preprocessor.h  Tracer.cpp  Tracer.h
mri_convert/: CMakeLists.txt  mri_convert.cpp  mri_convert.help.xml  mri_convert_17.cpp  mri_convert_bench.cpp  mri_convert_exec.cpp  mri_convert_fuzz.cpp  mri_convert_lib.cpp  mri_convert_old.cpp  mri_convert_tests.cpp  mri_convert_unit.cpp  mri_make_uchar.cpp  test.sh
mri_watershed/brain_volume/: CMakeLists.txt  TVector.h  mri_brain_volume.cpp  mrivariables.h  test.cpp
mri_wbc/: CMakeLists.txt  mri_wbc.cpp  mri_wbc_exec.cpp  mri_wbc_tests.cpp
mris_transform/: CMakeLists.txt  mris_transform.cpp  mris_transform.help.xml  test.sh
python/: CMakeLists.txt  fspython  setup.py
python/bindings/: CMakeLists.txt  numpy.cpp  numpy.h  python.cpp  surface.cpp  surface.h  volume.cpp
python/bindings/gems/: CMakeLists.txt  pyKvlCalculator.h  pyKvlImage.cxx  pyKvlImage.h  pyKvlMesh.cxx  pyKvlMesh.h  pyKvlNumpy.h  pyKvlOptimizer.h  pyKvlTransform.cxx  pyKvlTransform.h  python.cxx
python/bindings/utils/: CMakeLists.txt  module.cpp  morph.cpp  morph.h  numpy.cpp  numpy.h  parameterization.cpp  surface.cpp  surface.h  volume.cpp  volume.h  xform.cpp  xform.h
python/freesurfer/: deprecations.py  freeview.py  geom.py  metrics.py  ndarray.py  normalize.py  surface.py  transform.py
python/freesurfer/deeplearn/: _deepnet.py  _models.py  _utility.py  losses.py  metrics.py  surf_utils.py  utils.py
python/freesurfer/deeplearn/scripts/: make_semi_folding_atlas.py  synthstrip.py  train_parcellation.py
python/freesurfer/samseg/: Affine.py  BiasField.py  GMM.py  ProbabilisticAtlas.py  Samseg.py  SamsegLesion.py  SamsegLongitudinal.py  SamsegLongitudinalLesion.py  SamsegTumor.py  SamsegUtility.py  VAE.py  color_scheme.py  figures.py  hdav.py  io.py  kvl.py  merge_alphas.py  prepareAtlasDirectory.py  utilities.py  warp_mesh.py
python/freesurfer/utils/: general.py  legacy.py  logging.py  parser.py  system.py  term.py
utils/test/: ANN.h  ANNperf.h  ANNx.h  CMakeLists.txt  MRISresampleOntoSphere.cpp  MRISwaveletsTransform.cpp  checkanalyze.cpp  ctest.sh  difftool.cpp  extest.cpp  fmarching3dnband.c  fmarching3dnband.cpp  fmarching3dnband.h  gcaread.cpp  heap_mesh.cpp  heap_mesh.h  i2rtest.cpp  icotest.cpp  inftest.cpp  mcheck.h  mghxform.cpp  mnitest.cpp  mri_apply_EM_mask.c  mri_apply_EM_mask.cpp  mri_apply_INU.cpp  mri_compute_all_CNR.c  mri_compute_all_CNR.cpp  mri_compute_stats.c  mri_compute_stats.cpp  mri_concatenate_lta.c  mri_copy_params.cpp  mri_copy_params_utils_test.cpp  mri_edit_wm.c  mri_edit_wm.cpp  mri_extract.c  mri_flip2analyze.cpp  mri_fslmat_to_lta.c  mri_ms_LDA.c  mri_ms_compute_CNR.cpp  mri_ms_gca_EM.c  (+39 more)
utils/test/MRIScomputeBorderValues/: CMakeLists.txt  test.sh  test_MRIScomputeBorderValues.cpp
utils/test/MRISpositionSurface/: test_MRISpositionSurface.cpp
utils/test/mriBuildVoronoiDiagramFloat/: CMakeLists.txt  test.sh  test_mriBuildVoronoiDiagramFloat.cpp
utils/test/mriSoapBubbleFloat/: CMakeLists.txt  test.sh  test_mriSoapBubbleFloat.cpp
utils/test/mrishash/: CMakeLists.txt  mrishash_demo_100_find_coverage.c  mrishash_demo_100_find_coverage.cpp  mrishash_demo_200_mht_hatch.c  mrishash_demo_200_mht_hatch.cpp  mrishash_test_100_find_tests.c  mrishash_test_100_find_tests.cpp  mrishash_test_200_intersect.c  mrishash_test_200_intersect.cpp
utils/unittests/: Bruker_unit.cpp  CMakeLists.txt  DICOMRead_unit.cpp  MARS_DT_Boundary_unit.cpp  MRISrigidBodyAlignGlobal_unit.cpp  MRIio_old_unit.cpp  afni_unit.cpp  annotation_unit.cpp  argparse_unit.cpp  autoencoder_unit.cpp  bfileio_unit.cpp  box_unit.cpp  chklc_unit.cpp  class_array_unit.cpp  cluster_unit.cpp  cma_unit.cpp  cmat_unit.cpp  cmdargs_unit.cpp  colortab_unit.cpp  connectcomp_unit.cpp  corio_unit.cpp  cpputils_unit.cpp  ctrpoints_unit.cpp  cvector_unit.cpp  dct_unit.cpp  density_unit.cpp  diag_unit.cpp  dmatrix_tests.cpp  dmatrix_unit.cpp  dti_unit.cpp  dtk.fs_unit.cpp  evschutils_unit.cpp  fcd_unit.cpp  fftutils_unit.cpp  field_code_unit.cpp  filter_unit.cpp  fio_unit.cpp  flash_unit.cpp  fmriutils_unit.cpp  fnv_hash_test_unit.cpp  (+105 more)
(+2624 files in other folders)
